force-app/main/default/objects/PWChrono_Attendance_Request__c/PWChrono_Attendance_Request__c.object-meta.xml
<CustomObject>
    <label>Attendance Request</label>
    <nameField>
        <displayFormat>ATR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>