force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/Actual_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Actual_Check_Out__c</fullName>
    <label>Actual Check-Out</label>
    <type>Time</type>
</CustomField>