force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Applied_Date__c</fullName>
    <label>Applied Date</label>
    <type>Date</type>
</CustomField>