force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/Attendance_Date__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Date__c</fullName>
    <label>Attendance Date</label>
    <type>Date</type>
</CustomField>