force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>