force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/Correction_Type__c.field-meta.xml
<CustomField>
    <fullName>Correction_Type__c</fullName>
    <label>Correction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check-In Missing</fullName>
            </value>
            <value>
                <fullName>Check-Out Missing</fullName>
            </value>
            <value>
                <fullName>Both Missing</fullName>
            </value>
            <value>
                <fullName>Wrong Time</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>