force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Attendance Requests</relationshipLabel>
    <relationshipName>PWChrono_Attendance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>