force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employees</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Attendance Request Employees</relationshipLabel>
    <relationshipName>Attendance_Request_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>