force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/From_Time__c.field-meta.xml
<CustomField>
    <fullName>From_Time__c</fullName>
    <label>From Time</label>
    <type>Time</type>
</CustomField>