force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/Portal_Users__c.field-meta.xml
<CustomField>
    <fullName>Portal_Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Users</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Attendance Request Portal Users</relationshipLabel>
    <relationshipName>Attendance_Request_Portal_Users</relationshipName>
    <type>Lookup</type>
</CustomField>