force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/Shift_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Shift_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift Assignment</label>
    <referenceTo>PWChrono_Shift_Assignment__c</referenceTo>
    <relationshipLabel>Attendance Requests</relationshipLabel>
    <relationshipName>Attendance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>