force-app/main/default/objects/PWChrono_Attendance_Request__c/fields/To_Time__c.field-meta.xml
<CustomField>
    <fullName>To_Time__c</fullName>
    <label>To Time</label>
    <type>Time</type>
</CustomField>