force-app/main/default/objects/PWChrono_Attendance_Request__c/listViews/My_Attendance_Requests.listView-meta.xml
<ListView>
    <fullName>My_Attendance_Requests</fullName>
    <columns>NAME</columns>
    <columns>Attendance_Date__c</columns>
    <columns>From_Time__c</columns>
    <columns>To_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Attendance Requests</label>
</ListView>