force-app/main/default/objects/PWChrono_Attendance_Request__c/listViews/Pending_Attendance_Approvals.listView-meta.xml
<ListView>
    <fullName>Pending_Attendance_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Attendance_Date__c</columns>
    <columns>From_Time__c</columns>
    <columns>To_Time__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Pending Attendance Approvals</label>
</ListView>